--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@types/node": "^20.10.0",
     "antd": "^5.11.4",
     "axios": "^1.6.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pine": "^1.0.2",
     "react-router-dom": "6"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
